# JaneStreet-RealTimeMarketDataForecasting

./: .gitignore  README.md  pyproject.toml
best-candidates/: README.md
charts/: README.md  generate_best_candidate_visuals.py  generate_leaderboard_candidate_comparison.py  gerar_graficos.py  leaderboard_candidate_score_comparison.csv  manifest.json
docs/: research_evolution.md  scientific_methodology.md
multi-models/: MODEL_FAMILY_ARTIFACTS.md  run_cheap_oof_subset_search.py  run_fold_score_selection.py  run_multimodel_experiment.py  run_report_scoreboard.py  run_strong_family_bridge_diagnostics.py  run_strong_family_bridge_experiment.py  run_strong_oof_diagnostics.py
scripts/: analyze_clock_tail_switch.py  analyze_online_tail_variants.py  analyze_ridge_slices.py  build_daily_responder_lag_cache.py  build_kaggle_late_submission_package.py  build_prediction_average.py  build_responder_lag_cache.py  export_dynamic_rls_meta_artifact.py  inspect_ridge_failure_slice.py  prepare_historical_gateway_validation.py  run_bayesian_meta_experiments.py  run_clock_property_comparison.py  run_clock_tournament.py  run_competitive_tabular_nn.py  run_frozen_gateway_candidate_validation.py  run_frozen_risk_shrink_slice_audit.py  run_frozen_tail_holdout.py  run_online_linear.py  run_online_tail_control_validation.py  run_operational_time_feature_baseline.py  run_prediction_blend.py  run_regime_confidence_gate_validation.py  run_ridge_calibration_experiment.py  run_ridge_gbdt_blend.py  run_ridge_score_context_experiment.py  run_ridge_smoke.py  run_ridge_sweep.py  run_tabpfn_baseline.py  (+7 more)
(+1098 files in other folders)
